<resources>
    <string name="app_name">SysTime</string>
    <string name="bienvenido_a">Bienvenido/a</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="sign_in">Inicia sesión</string>
    <string name="nav_header_image" />
    <string name="usuario">Usuario</string>
    <string name="aplicaci_n_de_gesti_n_de_tiempo">APLICACIÓN DE GESTIÓN DE TIEMPO</string>
    <string name="tarea_pendiente">TAREA PENDIENTE</string>
    <string name="evento_pendiente">EVENTO PENDIENTE</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="add_event_desc" />
    <string name="ver">Ver</string>
    <string name="next_month_desc">\n</string>
    <string name="prev_month_desc" />
    <string name="inicio">Inicio</string>
    <string name="calendario">Calendario</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="add_event" />
    <string name="mes">MES</string>
    <string name="guardar_tarea" />
    <string name="agregar_tarea">\n</string>
    <string name="register">Registrarse</string>
    <string name="Bienvenido">SysTime</string>
    <string name="semana">\n</string>
    <string name="guardar_evento" />
    <string name="google_maps_key">AIzaSyAoGX963jG204l4DLQZNETSCfsXuUOUFTg</string>

</resources>