<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFC"
    android:padding="16dp">

    <!-- Imagen de usuario -->
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="361dp"
        android:layout_height="289dp"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_user" />

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/bienvenido_a"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2C3E50"
        android:fontFamily="sans-serif-medium"/>

    <!-- Etiqueta de correo -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:text="Correo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2C3E50" />

    <!-- Campo de entrada de correo -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email_label"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <!-- Etiqueta de contraseña -->
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:text="Contraseña"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2C3E50" />

    <!-- Campo de entrada de contraseña -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password_label"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <!-- Botón de inicio de sesión centrado -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_below="@id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:backgroundTint="#3EB898"
        android:elevation="5dp"
        android:text="@string/sign_in"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Opción para registrarse -->
    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="-8dp"
        android:text="¿No tienes cuenta? Regístrate"
        android:textColor="#2C3E50"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
