<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFC"
    android:padding="16dp">

    <!-- Imagen de usuario -->
    <ImageView
        android:id="@+id/register_image"
        android:layout_width="281dp"
        android:layout_height="199dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_user" />

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_image"
        android:layout_centerHorizontal="true"
        android:text="@string/Bienvenido"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#10988C"
        android:fontFamily="sans-serif-medium" />

    <!-- Etiqueta de nombre de usuario -->
    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_text"
        android:layout_alignParentStart="true"
        android:text="Nombre de usuario"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2C3E50" />

    <!-- Campo de entrada de nombre de usuario -->
    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/username_label"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:hint="Nombre de usuario"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <!-- Etiqueta de correo -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_input"
        android:layout_alignParentStart="true"
        android:text="Correo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2C3E50" />

    <!-- Campo de entrada de correo -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email_label"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <!-- Etiqueta de contraseña -->
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_alignParentStart="true"
        android:text="Contraseña"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2C3E50" />

    <!-- Campo de entrada de contraseña -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password_label"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <!-- Etiqueta de confirmar contraseña -->
    <TextView
        android:id="@+id/confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_alignParentStart="true"
        android:text="Confirmar Contraseña"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#2C3E50" />

    <!-- Campo de entrada para confirmar contraseña -->
    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/confirm_password_label"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        android:hint="Confirmar Contraseña"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="25sp" />

    <!-- Botón de registro centrado -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/confirm_password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3EB898"
        android:elevation="5dp"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Opción para volver al inicio de sesión -->
    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="¿Ya tienes cuenta? Inicia sesión"
        android:textColor="#2C3E50"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
